# ===============================================================
# 
# Release under GPLv-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    08/08 2024 14:33
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        08/08 2024      create the file
# 
#     last modified: 08/08 2024 14:33
# ===============================================================

SUBDIRS = \
          GCC \
          MemMang
